# cluster-job-monitor

./: .gitignore  LICENSE  README.md  clusters.example.json  docs-requirements.txt  mcp_server.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  requirements.txt  run.py
.github/workflows/: ci.yml  docs.yml  release.yml
cluster_job_monitor/: __init__.py  cli.py  mcp_server.py
cluster_job_monitor/tui/: app.py  render.py  sample.py
core/: __init__.py  collector.py
docs/: agent-overview.md  configuration.md  development.md  index.md  mcp.md  quickstart.md
scripts/: gen_screenshots.py
tests/: test_app.py  test_collector.py  test_mcp.py  test_overview.py  test_queue_and_types.py  test_render.py  test_run.py
tui/: app.py  render.py  sample.py
