[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluster-job-monitor"
version = "0.1.0"
description = "Read-only multi-cluster SLURM dashboard + agent capacity overview, over CLI and MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David Wessels", email = "davidwessels15@gmail.com" }]
keywords = ["slurm", "hpc", "cluster", "gpu", "dashboard", "mcp", "tui"]
dependencies = ["textual>=0.60"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5"]

[project.scripts]
cluster-jobs = "cluster_job_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/Dafidofff/cluster-job-monitor"
Repository = "https://github.com/Dafidofff/cluster-job-monitor"

[tool.hatch.build.targets.wheel]
# Ship ONLY the import package. The root run.py / mcp_server.py are
# back-compat shims for checkouts, not part of the distribution, and the
# legacy top-level core/tui packages must never reach a user's import path.
packages = ["cluster_job_monitor"]

[tool.hatch.build.targets.sdist]
include = [
    "cluster_job_monitor",
    "tests",
    "run.py",
    "mcp_server.py",
    "clusters.example.json",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
# Make the cluster_job_monitor package importable in tests straight from a
# checkout. With `pip install -e .` it's already on the path; this keeps a bare
# `pytest` working too.
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["cluster_job_monitor"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise SystemExit",
]
